--- a/corgi-chatbot/corgi-chatbot.csproj
+++ b/corgi-chatbot/corgi-chatbot.csproj
@@ -12,6 +12,8 @@
     <None Remove="Discord.Net" />
     <None Remove="Microsoft.Extensions.DependencyInjection" />
     <None Remove="System.Configuration.ConfigurationManager" />
+    <None Remove="Modules\" />
+    <None Remove="Services\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.8.1" />
@@ -20,5 +22,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="corgi-chatbot.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Modules\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
